# sa_testing

./: README.md  meson.build
src/: main.cpp
subprojects/: kseqpp.wrap  libsais.wrap  quill.wrap
